Added last batch ticket info

--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -16,9 +16,9 @@
         <article class="wrap">
 
             <h1>Tickets</h1>
-            <p>Early Rebel tickets will go on sale Friday 1st of March at 14:00 GMT (15:00 Norwegian time)!</p>
+            <p><strong>NOTE:</strong> There will be released a minor batch of tickets in near future. Please follow our <a href="https://twitter.com/web_rebels">Twitter</a> account, or this space, for further information!</p>
 
-            <div style="width:100%; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=3153505219&ref=etckt&v=2" frameborder="0" height="250" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe></div>
+            <div style="width:100%; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=3153505219&ref=etckt&v=2" frameborder="0" height="320" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe></div>
 
             <div class="separator"></div>
 
@@ -41,19 +41,19 @@
             </ul>
 
             <p>
-                We know that our speakers will be great and you will not go hungry during the conference. 
+                We know that our speakers will be great and you will not go hungry during the conference.
             </p>
             <p>
                 We put pride in making sure you have the best entertainment during the after party and access to a good selection of micro brewery beers (just checkout the <a href="http://webrebels.tumblr.com/post/24346798911/were-doing-the-accounting-thing-these-days-and">selection of beverages consumed at last years party</a>) too choose from.
             </p>
 
             <div class="separator"></div>
-            
+
             <h2>Chat with us!</h2>
             <p>
                 Come and hang out with us on irc. We're at <strong>#webrebels</strong> at <strong>irc.freenode.net</strong>.
             </p>
-            
+
             <ul id="chat" class="hidden"></ul>
 
         </article>
