Added David Nolens travel route

--- a/views/roadbook.ejs
+++ b/views/roadbook.ejs
@@ -47,6 +47,29 @@
             We feel deeply honored if you mention us in social media. If you do, our official hashtag is: <strong>#webrebels</strong>
         </p>
 
+        <h2>Speaker travel routes</h2>
+        <table class="routes">
+            <tr class="speaker">
+                <td class="name" colspan="6">David Nolen:</td>
+            </tr>
+            <tr class="inbound">
+                <td class="date">21.05</td>
+                <td class="departtime">19:00</td>
+                <td class="flight">SK908</td>
+                <td class="from">New York, Newark Liberty International</td>
+                <td class="arrivaltime">08:20</td>
+                <td class="to">Oslo, Gardermoen</td>
+            </tr>
+            <tr class="outbound">
+                <td class="date">26.05</td>
+                <td class="departtime">11:10</td>
+                <td class="flight">SK907</td>
+                <td class="from">Oslo, Gardermoen</td>
+                <td class="arrivaltime">13:10</td>
+                <td class="to">New York, Newark Liberty International</td>
+            </tr>
+        </table>
+
     </article>
 
     <% include snips/footer.ejs %>
