Added travel info on Mario

--- a/views/roadbook.ejs
+++ b/views/roadbook.ejs
@@ -68,6 +68,26 @@
                 <td class="arrivaltime">13:10</td>
                 <td class="to">New York, Newark Liberty International</td>
             </tr>
+
+            <tr class="speaker">
+                <td class="name" colspan="6">Mario Heiderich:</td>
+            </tr>
+            <tr class="inbound">
+                <td class="date">22.05</td>
+                <td class="departtime">13:10</td>
+                <td class="flight">DY1349</td>
+                <td class="from">Manchester</td>
+                <td class="arrivaltime">16:10</td>
+                <td class="to">Oslo, Gardermoen</td>
+            </tr>
+            <tr class="outbound">
+                <td class="date">24.05</td>
+                <td class="departtime">19:00</td>
+                <td class="flight">DY1348</td>
+                <td class="from">Oslo, Gardermoen</td>
+                <td class="arrivaltime">20:10</td>
+                <td class="to">Manchester</td>
+            </tr>
         </table>
 
     </article>
