--- a/views/oslo.ejs
+++ b/views/oslo.ejs
@@ -22,12 +22,13 @@
         <a href="#Grub">Grub</a> |
         <a href="#Beer">Beer</a> |
         <a href="#Coffee">Coffee</a> |
-        <a href="#Nightlife">Nightlife</a>
+        <a href="#Nightlife">Nightlife</a> |
+        <a href="#Sights">Sights</a>
         </p>
 
         <h2 id="Grub" class="centrify">Grub</h2>
         <div class="separator"></div>
-        <div class="speaker">
+        <div class="place">
             <img class="imageFrame" src="http://www.nighthawkdiner.com/gfx/nitehawk.png" width="140" height="140">
             <h2>Nighthawk Diner</h2>
             <p><a href="http://www.nighthawkdiner.com/">Homepage</a><br>
@@ -35,77 +36,121 @@
             <p>If you feel hung over and still have some money left, this is the place to go to. About as close you can come 
                 to an authentic American diner in Oslo. Amazing food, shakes and pancakes.</p>
         </div>
-        <div class="speaker">
+        <div class="place">
             <img class="imageFrame" height="140" width="140" alt="" src="http://media-cdn.tripadvisor.com/media/photo-s/01/fa/8b/8e/hai-cafe-in-oslo-norway.jpg">
             <h2>Døgnvill Burger</h2>
             <p>Located right next to the conference venue this is a great place for grabbing a quality burger.</p>
         </div>
-        <div class="speaker">
+        <div class="place">
             <img class="imageFrame" src="http://s3-media1.ak.yelpcdn.com/bphoto/Gq2fcerjIP2gq0O13vXr7g/ms.jpg" width="140">
             <h2><a href="http://www.nam-fah.com/">Nam Fah</a></h2>
             <p>Just up the street towards Grünerløkka you find one of the best places for Thai food in Norway. They only do take away and you can expect queues of locals all craving thai food. All at a reasonable price.</p>
         </div>
-        <div class="speaker">
+        <div class="place">
             <img class="imageFrame" height="140" width="140" alt="" src="http://profile.ak.fbcdn.net/hprofile-ak-ash2/161956_171199846244007_7890598_n.jpg">
             <h2>Illegal Burger</h2>
             <p><a href="http://maps.google.no/maps/place?sugexp=chrome,mod%3D1&um=1&ie=UTF-8&q=illegal+burger&fb=1&gl=no&hq=illegal+burger&hnear=0x46416e61f267f039:0x7e92605fd3231e9a,Oslo&cid=18012886209070138292">Directions</a>.</p>
                         <p>One of our favourite burger joints with excellent food at a very decent price. This is fast food at it's best, you'll be 
                             in and out in ten minutes.</p>
         </div>
-        <div class="speaker">
-            <img class="imageFrame" height="140" width="140" alt="" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRlq-tP60hP8trJmCwLb46cBERABqsOHXsqGytTOuw-YAV6A7-izA">
-            <h2>Hells Kitchen</h2>
-            <p><a href="http://www.foodspotting.com/places/34904-hells-kitchen-as-oslo">Reviews</a><br>
-            <a href="http://maps.google.no/maps/place?sugexp=chrome,mod%3D1&um=1&ie=UTF-8&q=illegal+burger&fb=1&gl=no&hq=illegal+burger&hnear=0x46416e61f267f039:0x7e92605fd3231e9a,Oslo&cid=18012886209070138292">Directions</a>.</p>
-            <p>A true rock'n roll pizza place with a wide selection of Italian style pizza. Probably the best pizza you'll find in Oslo.</p>
+        <div class="place">
+            <img class="imageFrame" src="" width="140" height="140">
+            <h2><a href="http://www.mathallenoslo.no/">Mathallen</a></h2>
+            <p>Mathallen is right on the premises of the conference provides you with a lot of amazing food from Norway. The prices are also very Norwegian, so if you're on a tight budget you might want to go elswhere.</p>
+        </div>
+        <div class="place">
+            <img class="imageFrame" height="140" width="140" alt="" src="">
+            <h2>Pizza Paradiso</h2>
+            <p>If you're into italian-style pizza this is the place to go to. They serve the best pizza in town at a decent price.</p>
         </div>
         <h2 id="Beer" class="centrify">Beer</h2>
         <div class="separator"></div>
-        <div class="speaker">
+        <div class="place">
             <img class="imageFrame" height="140" width="140" alt="" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRlq-tP60hP8trJmCwLb46cBERABqsOHXsqGytTOuw-YAV6A7-izA">
             <h2>Vardøen bar</h2>
             <p>This place has the longest bar counter in the world. Located downstairs in Mathallen right next to the venue. It has a great selection of beers</p>
         </div>
-        <div class="speaker">
+        <div class="place">
             <img class="imageFrame" width="140" height="140" src="">
             <h2>Amundsen</h2>
             <p></p>
         </div>
-        <div class="speaker">
+        <div class="place">
             <img class="imageFrame" width="140" height="140" src="">
             <h2></h2>
             <p></p>
         </div>
         <h2 id="Coffee" class="centrify">Coffee</h2>
         <div class="separator"></div>
-        <div class="speaker">
+        <div class="place">
             <img class="imageFrame" width="140" height="140" src="">
             <h2></h2>
             <p>Some of the most amazing coffe in the world is served right on the premises of the conference. </p>
         </div>
-        <div class="speaker">
+        <div class="place">
             <img class="imageFrame" width="140" height="140" src="">
             <h2>Stockfleths</h2>
             <p></p>
         </div>
-        <div class="speaker">
+        <div class="place">
             <img class="imageFrame" width="140" height="140" src="">
             <h2></h2>
             <p></p>
         </div>
         <h2 id="Nightlife" class="centrify">Nigtlife</h2>
         <div class="separator"></div>
-        <div class="speaker">
+        <div class="place">
             <img class="imageFrame" width="140" height="140" src="">
             <h2>Tilt</h2>
             <p></p>
         </div>
-        <div class="speaker">
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="">
+            <h2>Bar Boca</h2>
+            <p>If cocktalis is your thing, then you should make a stop at the famous tiki bar over at Günerløkka. You'll get amazing cocktails in a chill atmosphere.</p>
+        </div>
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="">
+            <h2>Parktheateret</h2>
+            <p></p>
+        </div>
+        <div class="place">
             <img class="imageFrame" width="140" height="140" src="">
             <h2></h2>
             <p></p>
         </div>
-        <div class="speaker">
+        <h2 id="Sights" class="centrify">Sights</h2>
+        <div class="separator"></div>
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="">
+            <h2></h2>
+            <p></p>
+        </div>
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="">
+            <h2>Opera</h2>
+            <p></p>
+        </div>
+        <h2 id="" class="centrify"></h2>
+        <div class="separator"></div>
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="">
+            <h2></h2>
+            <p></p>
+        </div>
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="">
+            <h2>The Opera</h2>
+            <p>Visiting the Opera on a sunny day is very much recomended. It's architecture and location makes for a nice stop when walking arround the city.</p>
+        </div>
+        <h2 id="" class="centrify"></h2>
+        <div class="separator"></div>
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="">
+            <h2>Günerløkka</h2>
+            <p>For some time this has been the hippest part of Oslo with it's shops, bars and restaurants all being amazing. This is the palce where everyone</p>
+        </div>
+        <div class="place">
             <img class="imageFrame" width="140" height="140" src="">
             <h2></h2>
             <p></p>
