more content for coffee

--- a/views/oslo.ejs
+++ b/views/oslo.ejs
@@ -73,7 +73,7 @@
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="">
             <h2>Amundsen</h2>
-            <p></p>
+            <p>One of the city's widest selection of beers is to be found at Amundsen. This is a bar with it's own micro brewery right there in the bar. Regardless of your taste in beers, you'll be satisfied with what you get here.</p>
         </div>
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="">
@@ -84,13 +84,13 @@
         <div class="separator"></div>
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="">
-            <h2></h2>
-            <p>Some of the most amazing coffe in the world is served right on the premises of the conference. </p>
+            <h2><a href="http://www.vulkan-oslo.no/default.aspx?menu=89&id=374">Solberg Hansen</a></h2>
+            <p>Some of the most amazing coffe in the world is served right on the premises of the conference. Solberg Hansen provide many of the great coffe spots in Oslo with high quality coffe.</p>
         </div>
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="">
             <h2>Stockfleths</h2>
-            <p></p>
+            <p>Stockfleths is a legendary brand synonumous with high quality coffee. They've got a few shops all over Oslo who all provide excellent coffee. The Web Rebels usually does their morning planning at either their <a href="https://www.google.com/maps/ms?ie=UTF8&oe=UTF8&msa=0&msid=103078545339054642723.000447165583b21de55cd">Tinghuset</a> or <a href="http://maps.google.com/maps?hl=en&bav=on.2,or.r_cp.r_qf.&bvm=bv.43287494,d.bGE&biw=1235&bih=864&um=1&ie=UTF-8&q=stockfleths+grensen&fb=1&hq=stockfleths+grensen&cid=0,0,6678250983037653381&sa=X&ei=2ptAUbLQH-iM4gSLuIHIBw&ved=0CJYBEPwSMAA">Grensen shops</a>.</p>
         </div>
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="">
