Added Microsoft as sponsor

--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -9,6 +9,7 @@
             <a class="sponsor comoyo" href="http://comoyo.no"></a>
             <a class="sponsor knowit" href="http://knowit.no"></a>
             <a class="sponsor bouvet" href="http://bouvet.no"></a>
+            <a class="sponsor microsoft" href="http://www.microsoft.com"></a>
         </section>
 
         <aside>
