--- a/public/css/style.css
+++ b/public/css/style.css
@@ -204,6 +204,11 @@ td ul {
     background-size:                80%;
     background-color:               rgb(255, 255, 255);
 }
+.sponsor.microsoft {
+    background:                     url("/gfx/sponsors/sponsor-microsoft.png") no-repeat center center;
+    background-size:                80%;
+    background-color:               rgb(255, 255, 255);
+}
 /* Frontpage */
 .poster {
     position:                       relative;
