--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -10,6 +10,7 @@
             <a class="sponsor knowit" href="http://knowit.no"></a>
             <a class="sponsor bouvet" href="http://bouvet.no"></a>
             <a class="sponsor microsoft" href="http://www.microsoft.com"></a>
+            <a class="sponsor computas" href="http://www.computas.com"></a>
         </section>
 
         <aside>
