--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -16,9 +16,9 @@
         <article class="wrap">
 
             <h1>Tickets</h1>
-            <p><strong>NOTE:</strong> There will be released a minor batch of tickets in near future. Please follow our <a href="https://twitter.com/web_rebels">Twitter</a> account, or this space, for further information!</p>
+            <p><strong>NOTE:</strong> The Web Rebel Last Batch tickets will go on sale on 2nd of April at 14:00 CMT!</p>
 
-            <div style="width:100%; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=3153505219&ref=etckt&v=2" frameborder="0" height="320" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe></div>
+            <div style="width:100%; text-align:left;"><iframe  src="http://www.eventbrite.com/tickets-external?eid=3153505219&ref=etckt&v=2" frameborder="0" height="320" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe></div>
 
             <div class="separator"></div>
 
