Added Dominic, Marius and Magnar

--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -79,24 +79,24 @@
             </a>
         </article>
 
-        <article class="slot row_c tba">
-            <a href="/speakers/#">
-                <div class="img"></div>
-                <h2>tba</h2>
+        <article class="slot row_c">
+            <a href="/speakers/#marius">
+                <div class="img" style="background-image: url(/gfx/front_marius.jpg);"></div>
+                <h2>Marius Gundersen</h2>
             </a>
         </article>
 
-        <article class="slot row_a tba">
-            <a href="/speakers/#">
-                <div class="img"></div>
-                <h2>tba</h2>
+        <article class="slot row_a">
+            <a href="/speakers/#dominic">
+                <div class="img" style="background-image: url(/gfx/front_dominic.jpg);"></div>
+                <h2>Dominic Tarr</h2>
             </a>
         </article>
 
-        <article class="slot row_b tba">
-            <a href="/speakers/#">
-                <div class="img"></div>
-                <h2>tba</h2>
+        <article class="slot row_b">
+            <a href="/speakers/#magnar">
+                <div class="img" style="background-image: url(/gfx/front_magnar.jpg);"></div>
+                <h2>Magnar Sveen</h2>
             </a>
         </article>
 
