--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -48,6 +48,16 @@
 
         <div class="separator"></div>
 
+        <a name="dominic"></a>
+        <div class="speaker">
+            <img class="imageFrame" height="140" width="140" alt="Dominic Tarr" src="../gfx/speaker_dominic.jpg">
+            <h2>Dominic Tarr</h2>
+            <p>Dominic is a self-styled "Mad Scientist" of javascript, most well known for his work on <a href="https://github.com/dominictarr/through">streams</a> and real-time <a href="https://github.com/dominictarr/scuttlebutt">distributed systems</a>, but is now getting into javascript database development with <a href="https://github.com/dominictarr/level-sublevel">leveldb</a>.</p>
+            <p>Dominic is happily being fed by irish development house / mad-science laboratory, nearform.</p>
+        </div>
+
+        <div class="separator"></div>
+
         <a name="garann"></a>
         <div class="speaker">
             <img class="imageFrame" height="140" width="140" alt="Garann Means" src="../gfx/speaker_garann.jpg">
@@ -62,6 +72,24 @@
             <img class="imageFrame" height="140" width="140" alt="Jan Lenhardt" src="../gfx/speaker_jan.jpg">
             <h2>Jan Lehnardt</h2>
             <p><a href="http://jan.prima.de/">Jan Lehnardt</a> is an Open Source developer. He works on all parts of the web stack and tries to make things easier for everyone. He’s a core contributor to <a href="http://couchdb.apache.org/">Apache CouchDB</a>, a co-curator for <a href="jsconf.eu">JSConf EU</a> and lives in Berlin.</p>
+        </div>
+
+        <div class="separator"></div>
+
+        <a name="magnar"></a>
+        <div class="speaker">
+            <img class="imageFrame" height="140" width="140" alt="Magnar Sveen" src="../gfx/speaker_magnar.jpg">
+            <h2>Magnar Sveen</h2>
+            <p>Magnar is a happy frontend developer with a crush on functional programming and lisps. He's done quite a few talks and courses on test-driven JavaScript development, as well as a screencast series on the topic in Norwegian at <a href="http://zombietdd.com">ZombieTDD</a>. He is also the voice behind <a href="http://emacsrocks.com">Emacs Rocks!</a>, and was at the WebRebels 2012 <a href="/openmic/">open-mic night</a> announced as the second coming of Emacs.</p>
+        </div>
+
+        <div class="separator"></div>
+
+        <a name="marius"></a>
+        <div class="speaker">
+            <img class="imageFrame" height="140" width="140" alt="Marius Gundersen" src="../gfx/speaker_marius.jpg">
+            <h2>Marius Gundersen</h2>
+            <p>Marius Gundersen is a frontend consultant with Ciber Norge AS, where he focuses on web and mobile development. Marius has more than a decades experience tinkering and playing with web technology, and enjoys sharing his knowledge through talks and presentations. More information on the projects he has worked on can be found at <a href="http://mariusgundersen.net">his website</a>.</p>
         </div>
 
         <div class="separator"></div>
