--- a/public/css/style.css
+++ b/public/css/style.css
@@ -214,6 +214,11 @@ td ul {
     background-size:                80%;
     background-color:               rgb(255, 255, 255);
 }
+.sponsor.amedia {
+    background:                     url("/gfx/sponsors/sponsor-amedia.png") no-repeat center center;
+    background-size:                80%;
+    background-color:               rgb(255, 255, 255);
+}
 /* Frontpage */
 .poster {
     position:                       relative;
