--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -9,8 +9,9 @@
             <a class="sponsor comoyo" href="http://comoyo.no"></a>
             <a class="sponsor knowit" href="http://knowit.no"></a>
             <a class="sponsor bouvet" href="http://bouvet.no"></a>
-            <a class="sponsor microsoft" href="http://www.microsoft.com"></a>
-            <a class="sponsor computas" href="http://www.computas.com"></a>
+            <a class="sponsor microsoft" href="http://microsoft.com"></a>
+            <a class="sponsor computas" href="http://computas.com"></a>
+            <a class="sponsor amedia" href="http://amedia.no/"></a>
         </section>
 
         <aside>
