--- a/views/roadbook.ejs
+++ b/views/roadbook.ejs
@@ -88,6 +88,26 @@
                 <td class="arrivaltime">20:10</td>
                 <td class="to">Manchester</td>
             </tr>
+
+            <tr class="speaker">
+                <td class="name" colspan="6">Felix Geisendoerfer:</td>
+            </tr>
+            <tr class="inbound">
+                <td class="date">22.05</td>
+                <td class="departtime">11:40</td>
+                <td class="flight">DY1103</td>
+                <td class="from">Berlin, Schönefeld</td>
+                <td class="arrivaltime">13:20</td>
+                <td class="to">Oslo, Gardermoen</td>
+            </tr>
+            <tr class="outbound">
+                <td class="date">25.05</td>
+                <td class="departtime">09:00</td>
+                <td class="flight">DY1348</td>
+                <td class="from">Oslo, Gardermoen</td>
+                <td class="arrivaltime">10:35</td>
+                <td class="to">Berlin, Schönefeld</td>
+            </tr>
         </table>
 
     </article>
