Added sold out info

--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -16,7 +16,7 @@
         <article class="wrap">
 
             <h1>Tickets</h1>
-            <p><strong>NOTE:</strong> The Web Rebel Last Batch tickets will go on sale on 2nd of April at 15:00 CET!</p>
+            <p>Web Rebels 2013 is sold out!</p>
 
             <div style="width:100%; text-align:left;"><iframe  src="http://www.eventbrite.com/tickets-external?eid=3153505219&ref=etckt&v=2" frameborder="0" height="320" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe></div>
 
