Added Garann to roadbook

--- a/views/roadbook.ejs
+++ b/views/roadbook.ejs
@@ -108,6 +108,42 @@
                 <td class="arrivaltime">10:35</td>
                 <td class="to">Berlin, Schönefeld</td>
             </tr>
+
+            <tr class="speaker">
+                <td class="name" colspan="6">Garann Means:</td>
+            </tr>
+            <tr class="inbound">
+                <td class="date">21.05</td>
+                <td class="departtime">06:00</td>
+                <td class="flight">SK 6865</td>
+                <td class="from">Austin</td>
+                <td class="arrivaltime">10:50</td>
+                <td class="to">New York EWR</td>
+            </tr>
+            <tr class="inbound">
+                <td class="date">21.05</td>
+                <td class="departtime">19:00</td>
+                <td class="flight">SK 908</td>
+                <td class="from">New York EWR</td>
+                <td class="arrivaltime">08:20</td>
+                <td class="to">Oslo, Gardermoen</td>
+            </tr>
+            <tr class="outbound">
+                <td class="date">26.05</td>
+                <td class="departtime">11:10</td>
+                <td class="flight">SK 907</td>
+                <td class="from">Oslo, Gardermoen</td>
+                <td class="arrivaltime">13:10</td>
+                <td class="to">New York EWR</td>
+            </tr>
+            <tr class="outbound">
+                <td class="date">26.05</td>
+                <td class="departtime">17:28</td>
+                <td class="flight">UA 5154</td>
+                <td class="from">New York EWR</td>
+                <td class="arrivaltime">20:38</td>
+                <td class="to">Austin</td>
+            </tr>
         </table>
 
     </article>
