--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -58,6 +58,15 @@
 
         <div class="separator"></div>
 
+        <a name="felix"></a>
+        <div class="speaker">
+            <img class="imageFrame" height="140" width="140" alt="Felix Geisendörfer" src="../gfx/speaker_felix.jpg">
+            <h2>Felix Geisendörfer</h2>
+            <p>Felix Geisendörfer, is a programmer and entrepreneur living in Berlin. He was one of the first users and core contributors of <a href="http://nodejs.org/">node.js</a>, and has used it to start a business, implement the <a href="https://github.com/felixge/node-mysql">MySQL wire protocol</a>, and program <a href="http://nodecopter.com/">flying robots</a>. His latest passion is <a href="http://golang.org/">Go</a>, which he is currently using to build an open source file upload server called tus.</p>
+        </div>
+
+        <div class="separator"></div>
+
         <a name="garann"></a>
         <div class="speaker">
             <img class="imageFrame" height="140" width="140" alt="Garann Means" src="../gfx/speaker_garann.jpg">
