--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -100,10 +100,10 @@
             </a>
         </article>
 
-        <article class="slot row_c tba">
-            <a href="/speakers/#">
-                <div class="img"></div>
-                <h2>tba</h2>
+        <article class="slot row_c">
+            <a href="/speakers/#felix">
+                <div class="img" style="background-image: url(/gfx/front_felix.jpg);"></div>
+                <h2>Felix Geisendörfer</h2>
             </a>
         </article>
 
