--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,6 +219,11 @@ td ul {
     background-size:                80%;
     background-color:               rgb(255, 255, 255);
 }
+.sponsor.couch {
+    background:                     url("/gfx/sponsors/sponsor-couch.png") no-repeat center center;
+    background-color:               rgb(255, 255, 255);
+    background-size:                80%;
+}
 /* Frontpage */
 .poster {
     position:                       relative;
