--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -12,6 +12,7 @@
             <a class="sponsor microsoft" href="http://microsoft.com"></a>
             <a class="sponsor computas" href="http://computas.com"></a>
             <a class="sponsor amedia" href="http://amedia.no/"></a>
+            <a class="sponsor couch" href="http://couchdb.apache.org/"></a>
         </section>
 
         <aside>
