--- a/views/roadbook.ejs
+++ b/views/roadbook.ejs
@@ -144,6 +144,42 @@
                 <td class="arrivaltime">20:38</td>
                 <td class="to">Austin</td>
             </tr>
+
+            <tr class="speaker">
+                <td class="name" colspan="6">Reginald Braithwaite:</td>
+            </tr>
+            <tr class="inbound">
+                <td class="date">20.05</td>
+                <td class="departtime">22:45</td>
+                <td class="flight">BA0096</td>
+                <td class="from">Toronto</td>
+                <td class="arrivaltime">11:00</td>
+                <td class="to">Heathrow, London</td>
+            </tr>
+            <tr class="inbound">
+                <td class="date">21.05</td>
+                <td class="departtime">13:05</td>
+                <td class="flight">BA0766</td>
+                <td class="from">Heathrow, London</td>
+                <td class="arrivaltime">16:15</td>
+                <td class="to">Oslo, Gardermoen</td>
+            </tr>
+            <tr class="outbound">
+                <td class="date">26.05</td>
+                <td class="departtime">11:50</td>
+                <td class="flight">BA0763</td>
+                <td class="from">Oslo, Gardermoen</td>
+                <td class="arrivaltime">13:15</td>
+                <td class="to">Heathrow, London</td>
+            </tr>
+            <tr class="outbound">
+                <td class="date">26.05</td>
+                <td class="departtime">16:20</td>
+                <td class="flight">BA0099</td>
+                <td class="from">Heathrow, London</td>
+                <td class="arrivaltime">18:55</td>
+                <td class="to">Toronto</td>
+            </tr>
         </table>
 
     </article>
