--- a/views/roadbook.ejs
+++ b/views/roadbook.ejs
@@ -68,6 +68,10 @@
                 <td class="arrivaltime">13:10</td>
                 <td class="to">New York, Newark Liberty International</td>
             </tr>
+            <tr class="accommodation">
+                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+            </tr>
+
 
             <tr class="speaker">
                 <td class="name" colspan="6">Mario Heiderich:</td>
@@ -88,6 +92,10 @@
                 <td class="arrivaltime">20:10</td>
                 <td class="to">Manchester</td>
             </tr>
+            <tr class="accommodation">
+                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+            </tr>
+
 
             <tr class="speaker">
                 <td class="name" colspan="6">Felix Geisendoerfer:</td>
@@ -108,6 +116,10 @@
                 <td class="arrivaltime">10:35</td>
                 <td class="to">Berlin, Schönefeld</td>
             </tr>
+            <tr class="accommodation">
+                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+            </tr>
+
 
             <tr class="speaker">
                 <td class="name" colspan="6">Garann Means:</td>
@@ -144,6 +156,10 @@
                 <td class="arrivaltime">20:38</td>
                 <td class="to">Austin</td>
             </tr>
+            <tr class="accommodation">
+                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+            </tr>
+
 
             <tr class="speaker">
                 <td class="name" colspan="6">Reginald Braithwaite:</td>
@@ -179,6 +195,57 @@
                 <td class="from">Heathrow, London</td>
                 <td class="arrivaltime">18:55</td>
                 <td class="to">Toronto</td>
+            </tr>
+            <tr class="accommodation">
+                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+            </tr>
+
+
+            <tr class="speaker">
+                <td class="name" colspan="6">Robert Nyman:</td>
+            </tr>
+            <tr class="inbound">
+                <td class="date">22.05</td>
+                <td class="departtime">n/a</td>
+                <td class="flight">n/a</td>
+                <td class="from">n/a</td>
+                <td class="arrivaltime">16:35</td>
+                <td class="to">Oslo, Gardermoen</td>
+            </tr>
+            <tr class="outbound">
+                <td class="date">25.05</td>
+                <td class="departtime">15:15</td>
+                <td class="flight">n/a</td>
+                <td class="from">Oslo, Gardermoen</td>
+                <td class="arrivaltime">n/a</td>
+                <td class="to">n/a</td>
+            </tr>
+            <tr class="accommodation">
+                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+            </tr>
+
+
+            <tr class="speaker">
+                <td class="name" colspan="6">Bodil Stokke:</td>
+            </tr>
+            <tr class="accommodation">
+                <td class="location" colspan="6">Lives in Oslo</td>
+            </tr>
+
+
+            <tr class="speaker">
+                <td class="name" colspan="6">Marius Gundersen:</td>
+            </tr>
+            <tr class="accommodation">
+                <td class="location" colspan="6">Lives in Oslo</td>
+            </tr>
+
+
+            <tr class="speaker">
+                <td class="name" colspan="6">Magnar Sveen:</td>
+            </tr>
+            <tr class="accommodation">
+                <td class="location" colspan="6">Lives in Oslo</td>
             </tr>
         </table>
 
