--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -11,7 +11,7 @@
             <a class="sponsor bouvet" href="http://bouvet.no"></a>
             <a class="sponsor microsoft" href="http://microsoft.com"></a>
             <a class="sponsor computas" href="http://computas.com"></a>
-            <a class="sponsor amedia" href="http://utvikling.amedia.no/stilling/"></a>
+            <a class="sponsor amedia" href="http://utvikling.amedia.no/"></a>
             <a class="sponsor couch" href="http://couchdb.apache.org/"></a>
             <a class="sponsor github" href="http://github.com/"></a>
         </section>
