fixing broken link to jsconfeu

--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -80,7 +80,7 @@
         <div class="speaker">
             <img class="imageFrame" height="140" width="140" alt="Jan Lenhardt" src="../gfx/speaker_jan.jpg">
             <h2>Jan Lehnardt</h2>
-            <p><a href="http://jan.prima.de/">Jan Lehnardt</a> is an Open Source developer. He works on all parts of the web stack and tries to make things easier for everyone. He’s a core contributor to <a href="http://couchdb.apache.org/">Apache CouchDB</a>, a co-curator for <a href="jsconf.eu">JSConf EU</a> and lives in Berlin.</p>
+            <p><a href="http://jan.prima.de/">Jan Lehnardt</a> is an Open Source developer. He works on all parts of the web stack and tries to make things easier for everyone. He’s a core contributor to <a href="http://couchdb.apache.org/">Apache CouchDB</a>, a co-curator for <a href="http://jsconf.eu">JSConf EU</a> and lives in Berlin.</p>
         </div>
 
         <div class="separator"></div>
