Added Pawel and flight info on Addy and Jan

--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -107,10 +107,10 @@
             </a>
         </article>
 
-        <article class="slot row_a tba">
-            <a href="/speakers/#">
-                <div class="img"></div>
-                <h2>tba</h2>
+        <article class="slot row_a">
+            <a href="/speakers/#pawel">
+                <div class="img" style="background-image: url(/gfx/front_pawel.jpg);"></div>
+                <h2>Pawel Kozlowski</h2>
             </a>
         </article>
 
