--- a/views/roadbook.ejs
+++ b/views/roadbook.ejs
@@ -226,6 +226,54 @@
 
 
             <tr class="speaker">
+                <td class="name" colspan="6">Jan Lehnardt:</td>
+            </tr>
+            <tr class="inbound">
+                <td class="date">22.05</td>
+                <td class="departtime">n/a</td>
+                <td class="flight">n/a</td>
+                <td class="from">n/a</td>
+                <td class="arrivaltime">18:30</td>
+                <td class="to">Oslo, Gardermoen</td>
+            </tr>
+            <tr class="outbound">
+                <td class="date">25.05</td>
+                <td class="departtime">16:00</td>
+                <td class="flight">n/a</td>
+                <td class="from">Oslo, Gardermoen</td>
+                <td class="arrivaltime">n/a</td>
+                <td class="to">n/a</td>
+            </tr>
+            <tr class="accommodation">
+                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+            </tr>
+
+
+            <tr class="speaker">
+                <td class="name" colspan="6">Addy Osmani:</td>
+            </tr>
+            <tr class="inbound">
+                <td class="date">22.05</td>
+                <td class="departtime">10:20</td>
+                <td class="flight">SK804</td>
+                <td class="from">London, Heathrow</td>
+                <td class="arrivaltime">13:30</td>
+                <td class="to">Oslo, Gardermoen</td>
+            </tr>
+            <tr class="outbound">
+                <td class="date">24.05</td>
+                <td class="departtime">20:15</td>
+                <td class="flight">SK815</td>
+                <td class="from">Oslo, Gardermoen</td>
+                <td class="arrivaltime">21:35</td>
+                <td class="to">London, Heathrow</td>
+            </tr>
+            <tr class="accommodation">
+                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+            </tr>
+
+
+            <tr class="speaker">
                 <td class="name" colspan="6">Bodil Stokke:</td>
             </tr>
             <tr class="accommodation">
