--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -116,6 +116,19 @@
 
         <div class="separator"></div>
 
+        <a name="pawel"></a>
+        <div class="speaker">
+            <img class="imageFrame" height="140" width="140" alt="Pawel Kozlowski" src="../gfx/speaker_pawel.jpg">
+            <h2>Pawel Kozlowski</h2>
+            <p>Pawel Kozlowski enjoys hacking on both back-end and front-end. During his career he was fortunate enough to use multitude of technologies, programming languages and tools but recently focuses on the front-end web development with <a href="http://angularjs.org/">AngularJS</a>.</p>
+
+            <p>Pawel strongly believes in free, open source software. He is very active in the AngularJS community and last year he was honored with the commiter privilege to the AngularJS project. He also contributes to <a href="http://angular-ui.github.io/bootstrap/">Angular-UI</a> - the companion suite to the AngularJS framework.</p>
+
+            <p>When not coding Pawel sharpens his writing skills and now he finishes a <a href="http://www.packtpub.com/angularjs-web-application-development/book.">book about web application development with AngularJS</a>. You can also find him spreading a good word about AngularJS at various conferences.</p>
+        </div>
+
+        <div class="separator"></div>
+
         <a name="reginald"></a>
         <div class="speaker">
             <img class="imageFrame" height="140" width="140" alt="Reginald Braithwaite" src="../gfx/speaker_reginald.jpg">
