--- a/views/roadbook.ejs
+++ b/views/roadbook.ejs
@@ -274,6 +274,30 @@
 
 
             <tr class="speaker">
+                <td class="name" colspan="6">Pawel Kozlowski:</td>
+            </tr>
+            <tr class="inbound">
+                <td class="date">22.05</td>
+                <td class="departtime">12:45</td>
+                <td class="flight">SK4704</td>
+                <td class="from">Nice, Cote D'Azur</td>
+                <td class="arrivaltime">15:35</td>
+                <td class="to">Oslo, Gardermoen</td>
+            </tr>
+            <tr class="outbound">
+                <td class="date">26.05</td>
+                <td class="departtime">18:45</td>
+                <td class="flight">SK4703</td>
+                <td class="from">Oslo, Gardermoen</td>
+                <td class="arrivaltime">21:45</td>
+                <td class="to"> Nice, Cote D'Azur</td>
+            </tr>
+            <tr class="accommodation">
+                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+            </tr>
+
+
+            <tr class="speaker">
                 <td class="name" colspan="6">Bodil Stokke:</td>
             </tr>
             <tr class="accommodation">
