More speakers and sponsor page

--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -114,10 +114,10 @@
             </a>
         </article>
 
-        <article class="slot row_b tba">
-            <a href="/speakers/#">
-                <div class="img"></div>
-                <h2>tba</h2>
+        <article class="slot row_b">
+            <a href="/speakers/#max">
+                <div class="img" style="background-image: url(/gfx/front_max.jpg);"></div>
+                <h2>Max Ogden</h2>
             </a>
         </article>
 
