--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -71,7 +71,7 @@
         <div class="speaker">
             <img class="imageFrame" height="140" width="140" alt="Garann Means" src="../gfx/speaker_garann.jpg">
             <h2>Garann Means</h2>
-            <p><a href="http://garann.com/">Garann</a> is a JavaScript developer from Austin, Texas, USA. Before switching back to the front-end, she worked for many years as a back-end and full-stack developer. She works for Etsy, is the author of <a href="http://shop.oreilly.com/product/0636920023258.do">Node for Front-End Developers</a>, and is the organizer of <a href="http://www.meetup.com/Austin-All-Girl-Hack-Night/">Austin All-Girl Hack Night</a> and <a href="http://www.meetup.com/Girl-Develop-It-Austin/">Girl Develop It Austin</a>.</p>
+            <p><a href="http://garann.com/">Garann</a> is a JavaScript developer from Austin, Texas, USA. Before switching back to the front-end, she worked for many years as a back-end and full-stack developer. She is the author of <a href="http://shop.oreilly.com/product/0636920023258.do">Node for Front-End Developers</a>, and is the organizer of <a href="http://www.meetup.com/Austin-All-Girl-Hack-Night/">Austin All-Girl Hack Night</a> and <a href="http://www.meetup.com/Girl-Develop-It-Austin/">Girl Develop It Austin</a>.</p>
         </div>
 
         <div class="separator"></div>
@@ -112,6 +112,15 @@
             <p>Mario invoked the <a href="http://html5sec.org/">HTML5 security cheat-sheet</a> and maintains the Crawly project. In his spare time he delivers trainings and security consultancy for larger German and international companies for sweet sweet money and the simple minded fun in breaking things.</p>
 
             <p>Mario has spoken on a large variety of international conferences, co-authored two books, several academic papers and doesn’t see a problem in his one-point-five year old son having a tablet already.</p>
+        </div>
+
+        <div class="separator"></div>
+
+        <a name="max"></a>
+        <div class="speaker">
+            <img class="imageFrame" height="140" width="140" alt="Max Ogden" src="../gfx/speaker_max.jpg">
+            <h2>Max Ogden</h2>
+            <p>Max Ogden is a JavaScript programmer who lives in Oakland, CA, home of the <a href="http://nodejs.org/">Node.js</a> project. Some previous projects include <a href="http://codeforamerica.org/">Code for America</a>, <a href="http://jsforcats.com/">JavaScript for Cats</a>, <a href="http://tacoconf.com/">TacoConf</a> and most recently <a href="http://voxeljs.com/">Voxel.js</a>, a WebGL voxel rendering engine.</p>
         </div>
 
         <div class="separator"></div>
