--- a/views/sponsors.ejs
+++ b/views/sponsors.ejs
@@ -28,6 +28,42 @@
             or read more about <a href="/sponsoroptions">our sponsoring options</a>.
         </p>
 
+
+        <div class="separator"></div>
+
+        <a class="sponsorLogo comoyo" href="http://comoyo.no/"></a>
+
+        <p>Comoyo is a young, rebellious company within the Telenor Group, developing film &amp; TV streaming services and internet-based communication services. We hire developers who want to make great services over time, and challenge existing conventions by experimenting with new ways of doing things. We're a mix of people with different backgrounds, and our culture is constantly evolving. Check out our developer blog on comoyo.github.com and job ads on comoyo.com/careers!</p>
+
+        <div class="separator"></div>
+
+        <a class="sponsorLogo amedia" href="http://utvikling.amedia.no/"></a>
+
+        <p>Amedia Utvikling has 47 employees in Norway and 12 in Bangkok. Among our
+        ranks we have developers, product developers, designers, editorial
+        developers, interaction designers and even a few poets. Our teams are made
+        up of seniors and juniors with expertise from frontend to backend,
+        business development and content development. We have offices in Oslo,
+        Bergen and Bangkok. The people and the know-how are the result of the
+        merger of the former A-pressen Interaktiv and Edda Utvikling.</p>
+
+        <p>In the development department we are organised into teams serving the
+        online newspapers, classifieds, football and user-centred content. In
+        addition, we have a DevOps team that ensures the solutions we produce can
+        both be operated and enhanced. We also have a department devoted to
+        editorial and commercial development.</p>
+
+        <p>On the server side, our applications are written in different languages,
+        but mainly Java, PHP, Node.js and Ruby. We believe in using the right tool
+        for the job, and are committed to maintaining a setting conducive to the
+        interaction of diverse technologies, as opposed to a monoculture. We use
+        the latest frameworks and libraries. We abide by the the 'release and
+        roll-out often' philosophy, and attach great importance to keeping the
+        developer's toolbox continually maintained. We have modular solutions and
+        modern technology (for the most part).</p>
+
+
+
     </article>
 
     <% include snips/footer.ejs %>
