--- a/public/css/style.css
+++ b/public/css/style.css
@@ -173,6 +173,13 @@ td ul {
     margin:                         0 5px 10px 5px;
     border-radius:                  4px;
 }
+.sponsorLogo {
+    display:                        block;
+    border:                         1px solid rgb(180, 180, 180);
+    width:                          130px;
+    height:                         60px;
+    margin-bottom:                  5px;
+}
 .sponsor.kodemaker {
     background:                     url("/gfx/sponsors/sponsor-kodemaker.png") no-repeat center center;
     background-color:               rgb(255, 255, 255);
@@ -229,6 +236,19 @@ td ul {
      background-color:               rgb(255, 255, 255);
      background-size:                80%;
 }
+
+.sponsorLogo.amedia {
+    background:                     url("/gfx/sponsors/sponsor-amedia.png") no-repeat center center;
+    background-size:                80%;
+    background-color:               rgb(255, 255, 255);
+}
+
+.sponsorLogo.comoyo {
+    background:                     url("/gfx/sponsors/sponsor-comoyo.png") no-repeat center center;
+    background-size:                80%;
+    background-color:               rgb(255, 255, 255);
+}
+
 /* Frontpage */
 .poster {
     position:                       relative;
