--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -26,6 +26,9 @@
             <p><a href="https://twitter.com/addyosmani">Addy</a> is a Developer Programs Engineer at Google who prolifically speaks and writes about JavaScript on a weekly basis. His material covers everything from building large-scale applications to using polyfills to bring the web's latest hotness to older browsers.</p>
             <p>Whilst Addy loves writing, his true passion is in helping move the web (even a little) forward. He's a member of the jQuery Core bug triage and docs teams and has also contributed to the open-source library, Modernizr.</p>
             <p>Addy was with us last year also and you can still see his excellent talk, <a href="http://vimeo.com/44100359">JavaScript Decoupling Vs. The World</a>, in our video pool.</p>
+
+            <h3>Topic:</h3>
+            <p>To be revealed soon!</p>
         </div>
 
         <div class="separator"></div>
@@ -35,6 +38,9 @@
             <img class="imageFrame" height="140" width="140" alt="Bodil Stokke" src="../gfx/speaker_bodil.jpg">
             <h2>Bodil Stokke</h2>
             <p><a href="http://bodil.org/">Bodil</a> is a developer, frequent speaker and occasional teacher of web technology and the dark realm of Lisp. She is currently leading the web dev team at <a href="http://arktekk.no/">Arktekk</a>. She is best known as the creator of the <a href="http://catnipide.com/">Catnip IDE</a>, and for her contributions to the field of programming language theory, especially the <a href="http://bodil.org/coffeescript/#the-secret-slide">Facial Hair Theory of Language Design</a>. She holds a doctorate in Metaphysics from <a href="http://www.themonastery.org/catalog/drofmetaphysicscertificate-p-116.html">ULC</a>, and her favourite pony is <a href="http://www.youtube.com/watch?v=cDuG95DXbw8">Rainbow Dash</a>.</p>
+
+            <h3>Topic:</h3>
+            <p>To be revealed soon!</p>
         </div>
 
         <div class="separator"></div>
@@ -44,6 +50,9 @@
             <img class="imageFrame" height="140" width="140" alt="David Nolen" src="../gfx/speaker_david.jpg">
             <h2>David Nolen</h2>
             <p><a href="http://dosync.posterous.com/">David Nolen</a> is a JavaScript developer at The New York Times and helps run the <a href="http://kitchentablecoders.com/">Kitchen Table Coders</a> workshops in Brooklyn. David spends far too much of his free time having fun hacking on <a href="https://github.com/clojure/core.logic">core.logic</a>, <a href="https://github.com/clojure/core.match">core.match</a>, and <a href="https://github.com/clojure/clojurescript">ClojureScript</a>.</p>
+
+            <h3>Topic:</h3>
+            <p>To be revealed soon!</p>
         </div>
 
         <div class="separator"></div>
@@ -54,6 +63,9 @@
             <h2>Dominic Tarr</h2>
             <p>Dominic is a self-styled "Mad Scientist" of javascript, most well known for his work on <a href="https://github.com/dominictarr/through">streams</a> and real-time <a href="https://github.com/dominictarr/scuttlebutt">distributed systems</a>, but is now getting into javascript database development with <a href="https://github.com/dominictarr/level-sublevel">leveldb</a>.</p>
             <p>Dominic is happily being fed by irish development house / mad-science laboratory, nearform.</p>
+
+            <h3>Topic:</h3>
+            <p>To be revealed soon!</p>
         </div>
 
         <div class="separator"></div>
@@ -63,6 +75,15 @@
             <img class="imageFrame" height="140" width="140" alt="Felix Geisendörfer" src="../gfx/speaker_felix.jpg">
             <h2>Felix Geisendörfer</h2>
             <p>Felix Geisendörfer, is a programmer and entrepreneur living in Berlin. He was one of the first users and core contributors of <a href="http://nodejs.org/">node.js</a>, and has used it to start a business, implement the <a href="https://github.com/felixge/node-mysql">MySQL wire protocol</a>, and program <a href="http://nodecopter.com/">flying robots</a>. His latest passion is <a href="http://golang.org/">Go</a>, which he is currently using to build an open source file upload server called tus.</p>
+
+            <h3>tus.io - Squeezing Cats Through Tiny Mobile Tubes</h3>
+            <p>The internet has a problem. With the rise of HD cameras, videos and images keep getting bigger and bigger. Unfortunately that makes it much harder to upload them through unreliable mobile networks. As a result, millions of cat videos and images are lost due to network errors every year.</p>
+
+            <p>The solutions are obvious, but unfortunately there is a distinct lack of interoperable software and protocols to make resumable file uploads a no-brainer for everybody.</p>
+
+            <p><a href="http://tus.io">tus.io</a> is an open source project that's here to change this! We are working on an open protocol, along with client and server implementations for all plattforms to make sure no upload will ever be lost in the tubes again.</p>
+
+            <p>This talk will go over the technical problems and browser APIs for performing resumable uploads, and also look at improving upload speeds.</p>
         </div>
 
         <div class="separator"></div>
@@ -72,6 +93,13 @@
             <img class="imageFrame" height="140" width="140" alt="Garann Means" src="../gfx/speaker_garann.jpg">
             <h2>Garann Means</h2>
             <p><a href="http://garann.com/">Garann</a> is a JavaScript developer from Austin, Texas, USA. Before switching back to the front-end, she worked for many years as a back-end and full-stack developer. She is the author of <a href="http://shop.oreilly.com/product/0636920023258.do">Node for Front-End Developers</a>, and is the organizer of <a href="http://www.meetup.com/Austin-All-Girl-Hack-Night/">Austin All-Girl Hack Night</a> and <a href="http://www.meetup.com/Girl-Develop-It-Austin/">Girl Develop It Austin</a>.</p>
+
+            <h3>contenteditable: Roll for sanity</h3>
+            <p>You may have heard that the contenteditable attribute is part of HTML5. Great news! We can edit almost anything, almost anywhere, without needing to swap in a messy-looking textarea.</p> 
+
+            <p>However, the history of contenteditable is longer and darker than its most recent implementations. The contenteditable attribute opens the door to a world that has driven developers to madness. We'll talk about the horror - and the power - that lives in the shadows of the browser. We'll go beyond merely replacing text and edit HTML on the fly, work with selected text, and even try to position the cursor.</p>
+
+            <p>If our sanity survives, we'll master contenteditable elements.</p>
         </div>
 
         <div class="separator"></div>
@@ -81,6 +109,9 @@
             <img class="imageFrame" height="140" width="140" alt="Jan Lenhardt" src="../gfx/speaker_jan.jpg">
             <h2>Jan Lehnardt</h2>
             <p><a href="http://jan.prima.de/">Jan Lehnardt</a> is an Open Source developer. He works on all parts of the web stack and tries to make things easier for everyone. He’s a core contributor to <a href="http://couchdb.apache.org/">Apache CouchDB</a>, a co-curator for <a href="http://jsconf.eu">JSConf EU</a> and lives in Berlin.</p>
+
+            <h3>Topic:</h3>
+            <p>To be revealed soon!</p>
         </div>
 
         <div class="separator"></div>
@@ -90,6 +121,9 @@
             <img class="imageFrame" height="140" width="140" alt="Magnar Sveen" src="../gfx/speaker_magnar.jpg">
             <h2>Magnar Sveen</h2>
             <p>Magnar is a happy frontend developer with a crush on functional programming and lisps. He's done quite a few talks and courses on test-driven JavaScript development, as well as a screencast series on the topic in Norwegian at <a href="http://zombietdd.com">ZombieTDD</a>. He is also the voice behind <a href="http://emacsrocks.com">Emacs Rocks!</a>, and was at the WebRebels 2012 <a href="/openmic/">open-mic night</a> announced as the second coming of Emacs.</p>
+
+            <h3>Topic:</h3>
+            <p>To be revealed soon!</p>
         </div>
 
         <div class="separator"></div>
@@ -99,6 +133,9 @@
             <img class="imageFrame" height="140" width="140" alt="Marius Gundersen" src="../gfx/speaker_marius.jpg">
             <h2>Marius Gundersen</h2>
             <p>Marius Gundersen is a frontend consultant with Ciber Norge AS, where he focuses on web and mobile development. Marius has more than a decades experience tinkering and playing with web technology, and enjoys sharing his knowledge through talks and presentations. More information on the projects he has worked on can be found at <a href="http://mariusgundersen.net">his website</a>.</p>
+
+            <h3>Topic:</h3>
+            <p>To be revealed soon!</p>
         </div>
 
         <div class="separator"></div>
@@ -112,6 +149,13 @@
             <p>Mario invoked the <a href="http://html5sec.org/">HTML5 security cheat-sheet</a> and maintains the Crawly project. In his spare time he delivers trainings and security consultancy for larger German and international companies for sweet sweet money and the simple minded fun in breaking things.</p>
 
             <p>Mario has spoken on a large variety of international conferences, co-authored two books, several academic papers and doesn’t see a problem in his one-point-five year old son having a tablet already.</p>
+
+            <h3>The innerHTML Apocalypse - How mXSS attacks change everything we believed to know so far</h3>
+            <p>This talk introduces and discusses a novel, mostly unpublished technique to attack websites that are applied with state-of-the-art XSS protection. This attack labeled Mutation-XSS (mXSS) is capable of bypassing high-end filter systems by utilizing the browser and its often unknown capabilities - every single one of them.</p>
+
+            <p>We analyzed the type and number of websites that are affected by this kind of attack. Several live demos during the presentation will share these impressions and help understanding, what mXSS is, why mXSS is possible and why it is of importance for defenders as well as professional attackers to be understood and researched even further.</p>
+
+            <p>The talk wraps up several years of research on this field, shows the abhorrent findings, discusses the consequences and delivers a step-by-step guide on how to protect against this kind of mayhem - with a strong focus on feasibility and scalability.</p>
         </div>
 
         <div class="separator"></div>
@@ -121,6 +165,11 @@
             <img class="imageFrame" height="140" width="140" alt="Max Ogden" src="../gfx/speaker_max.jpg">
             <h2>Max Ogden</h2>
             <p>Max Ogden is a JavaScript programmer who lives in Oakland, CA, home of the <a href="http://nodejs.org/">Node.js</a> project. Some previous projects include <a href="http://codeforamerica.org/">Code for America</a>, <a href="http://jsforcats.com/">JavaScript for Cats</a>, <a href="http://tacoconf.com/">TacoConf</a> and most recently <a href="http://voxeljs.com/">Voxel.js</a>, a WebGL voxel rendering engine.</p>
+
+            <h3>Minecraft in the browser</h3>
+            <p>In January 2013 I started the <a href="http://voxeljs.com">Voxel.js project</a>. Since then we have generated nearly 100 node modules related to 3D game development and distribution, e.g. voxel rendering and first person controls and physics. In the main module (voxel-engine) I've received 50 pull requests from 20 contributors.</p>
+
+            <p>I'd like to talk about why voxel.js has been successful from an open source standpoint (open from the beginning) and also show off some fun 3D demos and inspire people to take up game development in JS.</p>
         </div>
 
         <div class="separator"></div>
@@ -134,6 +183,11 @@
             <p>Pawel strongly believes in free, open source software. He is very active in the AngularJS community and last year he was honored with the commiter privilege to the AngularJS project. He also contributes to <a href="http://angular-ui.github.io/bootstrap/">Angular-UI</a> - the companion suite to the AngularJS framework.</p>
 
             <p>When not coding Pawel sharpens his writing skills and now he finishes a <a href="http://www.packtpub.com/angularjs-web-application-development/book.">book about web application development with AngularJS</a>. You can also find him spreading a good word about AngularJS at various conferences.</p>
+
+            <h3>AngularJS: teaching browsers new tricks</h3>
+            <p>This talk will familiarize you with AngularJS JavaScript framework and its revolutionary approach to writing single-page web applications. AngularJS is unique in many ways with its DOM-based, declarative templating, ability to extend HTML vocabulary and strong focus on testing.</p>
+
+            <p>AngularJS will be introduced by contrasting it with traditional approaches and showing benefits of the AngularJS-way (extremely concise yet readable code, testability and most importantly – making web development fun again!). This will be an interactive talk with plenty of code examples.</p>
         </div>
 
         <div class="separator"></div>
@@ -143,6 +197,9 @@
             <img class="imageFrame" height="140" width="140" alt="Reginald Braithwaite" src="../gfx/speaker_reginald.jpg">
             <h2>Reginald Braithwaite</h2>
             <p><a href="http://braythwayt.com/">Reginald Braithwaite</a> has more than twenty years of hands-on experience creating software products. He applies his Ruby, JavaScript, CoffeeScript, and advanced programming expertise to crafting well-factored and maintainable code. He speaks and <a href="https://github.com/raganwald/homoiconic">writes</a> about not-so-big design and dynamic meta-programming. Open source accomplishments include <a href="http://recursiveuniver.se/docs/cafeaulife.html">Cafe au Life</a> and <a href="https://github.com/raganwald/YouAreDaChef">YouAreDaChef</a>, in JS/CS, the <a href="http://andand.rubyforge.org/">andand gem for Ruby</a>, and the <a href="https://github.com/raganwald/JQuery-Combinators">jQuery Combinators plugin</a>.</p>
+
+            <h3>Topic:</h3>
+            <p>To be revealed soon!</p>
         </div>
 
         <div class="separator"></div>
@@ -152,6 +209,9 @@
             <img class="imageFrame" height="140" width="140" alt="Robert Nyman" src="../gfx/speaker_robert.jpg">
             <h2>Robert Nyman</h2>
             <p><a href="https://twitter.com/robertnyman">Robert</a> is a Technical Evangelist for Mozilla and the Editor of <a href="https://hacks.mozilla.org/">Mozilla Hacks</a>. He's a strong believer in HTML5 and the Open Web, has been working since 1999 with Front End development for the web - in Sweden and in New York City. He regularly <a href="http://robertnyman.com">blogs</a> and loves to travel and meet people.</p>
+
+            <h3>What are you going to do with your life?</h3>
+            <p>Robert will talk - from a developer perspective - on how you choose to spend your life and efforts, what you want to work with and why.</p>
         </div>
 
     </article>
